--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ img {
   display: block;
   /* no adapted image*/
   width: 100%;
-  max-width: 100%;
+  /* max-width: 100%;*/
   height: auto;
 }
 
@@ -451,8 +451,12 @@ body {
 }*/
 /* --------------SLOGAN ------------*/
 .slogan {
-  /*display: block;*/
-  max-width: 100%;
+  /* display: block;*/
+  /*max-width: 100%;*/
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 400px;
   /*background-color: #c4c4c4;*/
   background: rgba(47, 48, 58, 0.4);
   /* background-image: linear-gradient(
@@ -462,20 +466,23 @@ body {
     url(../images/mobile/slogan-img.jpg);*/
   /* background-image: url(../images/tablet/slogan-tab-img.jpg);*/
   background-image: url(../images/mobile/slogan-img.jpg);
+  /*@include mobile {
+
+    background-image: url(../images/tablet/slogan-tab-img.jpg);
+  }*/
   padding-top: 118px;
   padding-bottom: 118px;
   background-repeat: no-repeat;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .slogan {
-    /*background-image: url(../images/mobile/slogan-img.jpg);*/
-    background-image: url(../images/tablet/slogan-tab-img.jpg);
+    height: 600px;
   }
 }
 @media screen and (min-width: 768px) {
   .slogan {
     /* background-image: url(../images/tablet/slogan-tab-img.jpg);*/
-    background-image: url(../images/desktop/slogan-desktop-img.jpg);
+    background-image: url(../images/tablet/slogan-tab-img.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -710,7 +717,12 @@ body {
 /* --------------INFO ------------*/
 .info {
   background: #f5f4fa;
-  padding: 94px 0;
+  padding: 60px 0;
+}
+@media screen and (min-width: 1200px) {
+  .info {
+    padding: 94px 0;
+  }
 }
 
 .info-title {
@@ -892,7 +904,7 @@ body {
 .footer__container {
   /* margin-left: 0;
   margin-right: 0;*/
-  width: 100%;
+  /* width: 100%;*/
 }
 @media screen and (min-width: 1200px) {
   .footer__container {
@@ -1085,7 +1097,7 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  width: 358px;
+  width: 100%;
   height: 50px;
   background-color: #2f303a;
   display: flex;
@@ -1095,9 +1107,9 @@ body {
   padding-left: 10px;
   /*margin-right: 12px;*/
 }
-@media screen and (max-width: 479px) {
+@media screen and (min-width: 400px) {
   .footer-form-input {
-    width: 100%;
+    width: 358px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1173,16 +1185,34 @@ body {
 }
 
 .filter {
-  padding: 60px 0px;
+  padding-top: 60px;
+  padding-bottom: 40px;
   /*&__item:not(:last-child) {
     margin-right: 8px;
   }*/
+}
+@media screen and (min-width: 768px) {
+  .filter {
+    padding-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .filter {
+    padding-top: 94px;
+    padding-bottom: 50px;
+  }
 }
 .filter__list {
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
+  row-gap: 15px;
   margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .filter__list {
+    row-gap: 0px;
+  }
 }
 @media screen and (min-width: 768px) {
   .filter__list {
@@ -1221,7 +1251,7 @@ body {
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .product {
-    flex-grow: 2;
+    flex-grow: 1;
   }
 }
 .product-list {
@@ -1255,7 +1285,7 @@ body {
   .product-list__link {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    height: 100%;
   }
 }
 .product-list__link:hover, .product-list__link:focus {
