--- a/sass/layouts-studiy/_footer.scss
+++ b/sass/layouts-studiy/_footer.scss
@@ -14,7 +14,7 @@
 .footer__container {
   /* margin-left: 0;
   margin-right: 0;*/
-  width: 100%;
+  /* width: 100%;*/
   @include desktop {
     display: flex;
     margin-left: auto;
@@ -200,11 +200,12 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-    width: 358px;
+    width: 100%;
 
-    @include dn-mobile {
-      width: 100%;
+    @include mobile400 {
+      width: 358px;
     }
+
     @include tablet {
       width: 450px;
     }
