--- a/sass/layouts-studiy/_info.scss
+++ b/sass/layouts-studiy/_info.scss
@@ -1,7 +1,11 @@
 /* --------------INFO ------------*/
 .info {
   background: #f5f4fa;
-  padding: 94px 0;
+  padding: 60px 0;
+
+  @include desktop {
+    padding: 94px 0;
+  }
 }
 
 .info-title {
