--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -3,6 +3,11 @@
     @content;
   }
 }
+@mixin mobile400 {
+  @media screen and (min-width: 400px) {
+    @content;
+  }
+}
 @mixin mobile {
   @media screen and (min-width: 480px) {
     @content;
