--- a/css/main.css
+++ b/css/main.css
@@ -470,6 +470,7 @@ body {
 
     background-image: url(../images/tablet/slogan-tab-img.jpg);
   }*/
+  background-position: center;
   padding-top: 118px;
   padding-bottom: 118px;
   background-repeat: no-repeat;
