--- a/sass/layouts-studiy/_slogan.scss
+++ b/sass/layouts-studiy/_slogan.scss
@@ -33,7 +33,8 @@
   @include desktop {
     background-image: url(../images/desktop/slogan-desktop-img.jpg);
   }
-  background-position: center;
+  /*background-position: center;*/
+  background-size: cover;
   padding-top: 118px;
   padding-bottom: 118px;
   @include desktop {
