--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -177,6 +177,7 @@
   color: rgba(117, 117, 117, 0.5);
   /*margin-bottom: 20px;*/
   outline: none;
+  resize: none;
   &:focus {
     border: 1px solid #2196f3;
   }
