--- a/sass/layouts-studiy/_header.scss
+++ b/sass/layouts-studiy/_header.scss
@@ -1,13 +1,24 @@
 /* --------------HEADER ------------*/
 .header {
   background-color: white;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border-bottom: 1px solid #ececec;
-  @include no-mobile {
+  width: 100%;
+  @include mobile {
     padding-top: 10px;
     padding-bottom: 10px;
-    width: 100%;
+    /* width: 100%;*/
+  }
+  @include tablet {
+    padding-top: 21px;
+    padding-bottom: 21px;
+    /* width: 100%;*/
+  }
+  @include desktop {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    /* width: 100%;*/
   }
 }
 .header__container {
@@ -86,7 +97,12 @@
     opacity: 0;
     position: absolute;
     left: 0px;
-    bottom: -28px;
+    @include tablet {
+      bottom: -33px;
+    }
+    @include desktop {
+      bottom: -30px;
+    }
     display: inline-block;
     background-color: var(--accent-color);
     height: 4px;
